--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@
           <form class="form col-md-12 center-block">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
-                  <input class="form-control" name="userId" placeholder="User ID">
+                  <input class="form-control" name="userId" placeholder="user ID">
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
@@ -96,7 +96,7 @@
           <form class="form col-md-12 center-block">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
-                  <input class="form-control" id="userId" name="userId" placeholder="User ID">
+                  <input class="form-control" id="userId" name="userId" placeholder="user ID">
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
