--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -9,7 +9,7 @@
                     <div class="media">
                         {{#user}}
                         <a class="thumbnail pull-left" href="#">
-                            <img class="media-object" src="../../static/images/80-text.png">
+                            <img class="media-object" src="/static/images/80-text.png">
                         </a>
                         <div class="media-body">
                             <h4 class="media-heading">{{userId}} ({{name}})</h4>
