Add Question-User mapping (N:1)
- Question과 User를 N:1 단방향 mapping
- mapping으로 인해 파생되는 변경사항 수정
- Question에 생성일(createDate) 속성 추가

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -14,9 +14,9 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name">{{writer}}</a>
+                          <a href="/users/92/kimmunsu" class="article-author-name">{{writer.userId}}</a>
                           <a href="/questions/413" class="article-header-time" title="퍼머링크">
-                              2015-12-30 01:47
+                              {{formattedCreateDate}}
                               <i class="icon-link"></i>
                           </a>
                       </div>
@@ -30,7 +30,7 @@
                               <a class="link-modify-article" href="/questions/{{id}}/form">수정</a>
                           </li>
                           <li>
-                              <form class="form-delete" action="/questions/{{writer}}" method="POST">
+                              <form class="form-delete" action="/questions/{{id}}" method="POST">
                                   <input type="hidden" name="_method" value="DELETE">
                                   <button class="link-delete-article" type="submit">삭제</button>
                               </form>
