--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -47,6 +47,7 @@
                       <p class="qna-comment-count"><strong>2</strong>개의 의견</p>
                       <div class="qna-comment-slipp-articles">
                           {{#answers}}
+                          {{^deleted}}
                           <article class="article" id="answer-1405">
                               <div class="article-header">
                                   <div class="article-header-thumb">
@@ -76,6 +77,7 @@
                                   </ul>
                               </div>
                           </article>
+                          {{/deleted}}
                           {{/answers}}
                           <form class="submit-write" method="post" action="/questions/{{id}}/answers">
                               <div class="form-group" style="padding:14px;">
