--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
       <div class="panel panel-default qna-list">
           <ul class="list">
               {{#questions}}
+              {{^deleted}}
               <li>
                   <div class="wrap">
                       <div class="main">
@@ -23,6 +24,7 @@
                       </div>
                   </div>
               </li>
+              {{/deleted}}
               {{/questions}}
           </ul>
           <div class="row">
