Step4. 객체 관계 매핑 (#5)
* Add Question-User mapping (N:1)
   - Question과 User를 N:1 단방향 mapping
   - mapping으로 인해 파생되는 변경사항 수정
   - Question에 생성일(createDate) 속성 추가

* Refactor duplicate security logic
   - UserController와 QuestionController의 보안 관련 로직의 중복 제거(Result Class 활용)

* Add Answer create & list func
   - Answer와 Question를 N:1 양방향 mapping
   - 답변하기 기능 구현
   - 답변목록 기능 구현(Question 속성 활용)

* Add Answer delete func
   - 답변 삭제 기능 구현

* Modify Answer delete func
   - 답변 삭제 시, 실제 삭제가 아닌 삭제 상태로 변경

* Add test data
   - Question 테스트 데이터 추가
   - Answer 테스트 데이터 추가

* Modify Question delete func
   - 질문 삭제 시, 실제 DB상 삭제가 아닌 삭제 상태로 변경
   - 질문 삭제 시, 답변 없거나 본인 답변만 존재할때 삭제 가능토록 변경
   - 기본키 자동생성 방법 변경하여, 테스트 데이터에 의해 새로운 데이터 추가 시 발생했던 기본키 생성 오류 해결

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
       <div class="panel panel-default qna-list">
           <ul class="list">
               {{#questions}}
+              {{^deleted}}
               <li>
                   <div class="wrap">
                       <div class="main">
@@ -13,8 +14,8 @@
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
-                              <span class="time">2016-01-15 18:47</span>
-                              <a href="user/profile.html" class="author">{{writer}}</a>
+                              <span class="time">{{formattedCreateDate}}</span>
+                              <a href="user/profile.html" class="author">{{writer.userId}}</a>
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
@@ -23,6 +24,7 @@
                       </div>
                   </div>
               </li>
+              {{/deleted}}
               {{/questions}}
           </ul>
           <div class="row">
