Modify Answer create func by Ajax
- 답변하기 기능을 Ajax 기반으로 변경(RestController 추가, jQuery 활용한 Json 처리, 동적 html 생성)
- 회원 정보를 Json 처리하여 제공
- Answer-Question 양방향 mapping으로 인한 Json 직렬화 과정에서의 순환참조 방지를 위한 JsonIgnore 설정

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -79,14 +79,14 @@
                           </article>
                           {{/deleted}}
                           {{/answers}}
-                          <form class="submit-write" method="post" action="/questions/{{id}}/answers">
-                              <div class="form-group" style="padding:14px;">
-                                  <textarea class="form-control" placeholder="Update your status" name="contents"></textarea>
-                              </div>
-                              <button class="btn btn-success pull-right" type="submit">답변하기</button>
-                              <div class="clearfix" />
-                          </form>
                       </div>
+                      <form class="answer-write" method="post" action="/api/questions/{{id}}/answers">
+                          <div class="form-group" style="padding:14px;">
+                              <textarea class="form-control" placeholder="Update your status" name="contents"></textarea>
+                          </div>
+                          <button class="btn btn-success pull-right" type="submit">답변하기</button>
+                          <div class="clearfix" />
+                      </form>
                   </div>
               </div>
           </div>
