--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -66,10 +66,10 @@
                               <div class="article-util">
                                   <ul class="article-util-list">
                                       <li>
-                                          <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
+                                          <a class="link-modify-article-answer" href="/questions/413/answers/1405/form">수정</a>
                                       </li>
                                       <li>
-                                          <a class="link-delete-article" href="/api/questions/{{question.id}}/answers/{{id}}">삭제</a>
+                                          <a class="link-delete-article-answer" href="/api/questions/{{question.id}}/answers/{{id}}">삭제</a>
                                       </li>
                                   </ul>
                               </div>
@@ -109,10 +109,10 @@
 		<div class="article-util">
 		<ul class="article-util-list">
 			<li>
-				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
+				<a class="link-modify-article-answer" href="/api/qna/updateAnswer/{3}">수정</a>
 			</li>
 			<li>
-                <a class="link-delete-article" href="/api/questions/{3}/answers/{4}">삭제</a>
+                <a class="link-delete-article-answer" href="/api/questions/{4}/answers/{3}">삭제</a>
 			</li>
 		</ul>
 		</div>
