--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,8 @@
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
-                              <span class="time">{{formattedCreateDate}}</span>
                               <a href="user/profile.html" class="author">{{writer.userId}}</a>
+                              <span class="time">(생성일 : {{formattedCreateDate}} / 수정일 : {{formattedModifiedDate}})</span>
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
