--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,49 +1,51 @@
 {{#partial "content" }}
 
 <div class="container" id="main">
-   <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
-      <div class="panel panel-default qna-list">
-          <ul class="list">
-              {{#questions}}
-              {{^deleted}}
-              <li>
-                  <div class="wrap">
-                      <div class="main">
-                          <strong class="subject">
-                              <a href="/questions/{{id}}">{{title}}</a>
-                          </strong>
-                          <div class="auth-info">
-                              <i class="icon-add-comment"></i>
-                              <a href="user/profile.html" class="author">{{writer.userId}}</a>
-                              <span class="time">(생성일 : {{formattedCreateDate}} / 수정일 : {{formattedModifiedDate}})</span>
-                          </div>
-                          <div class="reply" title="댓글">
-                              <i class="icon-reply"></i>
-                              <span class="point">{{countOfAnswer}}</span>
-                          </div>
-                      </div>
-                  </div>
-              </li>
-              {{/deleted}}
-              {{/questions}}
-          </ul>
-          <div class="row">
-              <div class="col-md-3"></div>
-              <div class="col-md-6 text-center">
-                  <ul class="pagination center-block" style="display:inline-block;">
-                      <li><a href="#">«</a></li>
-                      <li><a href="#">1</a></li>
-                      <li><a href="#">2</a></li>
-                      <li><a href="#">3</a></li>
-                      <li><a href="#">4</a></li>
-                      <li><a href="#">5</a></li>
-                      <li><a href="#">»</a></li>
-                </ul>
-              </div>
-              <div class="col-md-3 qna-write">
-                  <a href="/questions/form" class="btn btn-primary pull-right" role="button">질문하기</a>
-              </div>
-          </div>
+    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
+        <div class="panel panel-default qna-list">
+            <ul class="list">
+                {{#questions}}
+                <li>
+                    <div class="wrap">
+                        <div class="main">
+                            <strong class="subject">
+                                <a href="/questions/{{id}}">{{title}}</a>
+                            </strong>
+                            <div class="auth-info">
+                                <i class="icon-add-comment"></i>
+                                <a href="user/profile.html" class="author">{{writer.userId}}</a>
+                                <span class="time">(생성일 : {{formattedCreateDate}} / 수정일 : {{formattedModifiedDate}})</span>
+                            </div>
+                            <div class="reply" title="댓글">
+                                <i class="icon-reply"></i>
+                                <span class="point">{{countOfAnswer}}</span>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                {{/questions}}
+            </ul>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6 text-center">
+                    <ul class="pagination center-block" style="display:inline-block;">
+                        {{#paging}}
+                            {{#preBtn}}
+                            <li><a href="/?page={{this}}">«</a></li>
+                            {{/preBtn}}
+                            {{#pages}}
+                            <li><a href="/?page={{this}}"><span id="pages">{{this}}</span></a></li>
+                            {{/pages}}
+                            {{#nextBtn}}
+                            <li><a href="/?page={{this}}">»</a></li>
+                            {{/nextBtn}}
+                        {{/paging}}
+                    </ul>
+                </div>
+                <div class="col-md-3 qna-write">
+                    <a href="/questions/form" class="btn btn-primary pull-right" role="button">질문하기</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
