--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -100,11 +100,11 @@
 			</div>
 			<div class="article-header-text">
 				<a href="#" class="article-author-name">{0}</a>
-				<div class="article-header-time">{1}</div>
+				<div class="article-header-time">(생성일 : {1} / 수정일 : {2})</div>
 			</div>
 		</div>
 		<div class="article-doc comment-doc">
-			(생성일 : {2} / 수정일 : {3})
+			{3}
 		</div>
 		<div class="article-util">
 		<ul class="article-util-list">
