Add Answer update func by Ajax
- 질문 수정 기능을 Ajax기반으로 구현
- ApiAnswerController 상의 보안 관련 로직의 중복 제거

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -48,7 +48,7 @@
                       <div class="qna-comment-slipp-articles">
                           {{#answers}}
                           {{^deleted}}
-                          <article class="article" id="answer-1405">
+                          <article class="article" id="answer-{{id}}">
                               <div class="article-header">
                                   <div class="article-header-thumb">
                                       <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
@@ -93,7 +93,7 @@
 </div>
 
 <script type="text/template" id="answerTemplate">
-	<article class="article">
+	<article class="article" id="answer-{4}">
 		<div class="article-header">
 			<div class="article-header-thumb">
 				<img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
