Modify URL at template
- 회원 정보보기 및 회원목록 기능 중, 아직 html상에서 연결하지 않았던 요소들을 mapping

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -14,8 +14,8 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name">{{writer.userId}}</a>
-                          <a href="/questions/413" class="article-header-time" title="퍼머링크">
+                          <a href="/users/{{writer.id}}" class="article-author-name">{{writer.userId}}</a>
+                          <a href="" class="article-header-time" title="퍼머링크">
                               (생성일 : {{formattedCreateDate}} / 수정일 : {{formattedModifiedDate}})
                               <i class="icon-link"></i>
                           </a>
@@ -55,7 +55,7 @@
                                   </div>
                                   <div class="article-header-text">
                                       <a href="/users/{{writer.id}}" class="article-author-name">{{writer.userId}}</a>
-                                      <a href="#answer-1434" class="article-header-time" title="퍼머링크">
+                                      <a href="" class="article-header-time" title="퍼머링크">
                                           (생성일 : {{formattedCreateDate}} / 수정일 : {{formattedModifiedDate}})
                                       </a>
                                   </div>
