--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
                             </strong>
                             <div class="auth-info">
                                 <i class="icon-add-comment"></i>
-                                <a href="user/profile.html" class="author">{{writer.userId}}</a>
+                                <a href="/users/{{writer.id}}" class="author">{{writer.userId}}</a>
                                 <span class="time">(생성일 : {{formattedCreateDate}} / 수정일 : {{formattedModifiedDate}})</span>
                             </div>
                             <div class="reply" title="댓글">
