--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -14,8 +14,8 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name">{{writer.userId}}</a>
-                          <a href="/questions/413" class="article-header-time" title="퍼머링크">
+                          <a href="/users/{{writer.id}}" class="article-author-name">{{writer.userId}}</a>
+                          <a href="" class="article-header-time" title="퍼머링크">
                               (생성일 : {{formattedCreateDate}} / 수정일 : {{formattedModifiedDate}})
                               <i class="icon-link"></i>
                           </a>
@@ -48,25 +48,25 @@
                       <div class="qna-comment-slipp-articles">
                           {{#answers}}
                           {{^deleted}}
-                          <article class="article" id="answer-1405">
+                          <article class="article" id="answer-{{id}}">
                               <div class="article-header">
                                   <div class="article-header-thumb">
                                       <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
                                   </div>
                                   <div class="article-header-text">
                                       <a href="/users/{{writer.id}}" class="article-author-name">{{writer.userId}}</a>
-                                      <a href="#answer-1434" class="article-header-time" title="퍼머링크">
+                                      <a href="" class="article-header-time" title="퍼머링크">
                                           (생성일 : {{formattedCreateDate}} / 수정일 : {{formattedModifiedDate}})
                                       </a>
                                   </div>
                               </div>
-                              <div class="article-doc comment-doc">
+                              <div class="article-doc comment-doc" id="comment_{{id}}">
                                   <p>{{contents}}</p>
                               </div>
                               <div class="article-util">
                                   <ul class="article-util-list">
                                       <li>
-                                          <a class="link-modify-article-answer" href="/questions/413/answers/1405/form">수정</a>
+                                          <a class="link-modify-article-answer" id="modify-article-{{id}}" href="/api/questions/{{question.id}}/answers/{{id}}/form">수정</a>
                                       </li>
                                       <li>
                                           <a class="link-delete-article-answer" href="/api/questions/{{question.id}}/answers/{{id}}">삭제</a>
@@ -93,23 +93,23 @@
 </div>
 
 <script type="text/template" id="answerTemplate">
-	<article class="article">
+	<article class="article" id="answer-{4}">
 		<div class="article-header">
 			<div class="article-header-thumb">
 				<img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
 			</div>
 			<div class="article-header-text">
 				<a href="#" class="article-author-name">{0}</a>
-				<div class="article-header-time">{1}</div>
+				<div class="article-header-time">(생성일 : {1} / 수정일 : {2})</div>
 			</div>
 		</div>
-		<div class="article-doc comment-doc">
-			(생성일 : {2} / 수정일 : {3})
+		<div class="article-doc comment-doc" id="comment_{4}">
+			{3}
 		</div>
 		<div class="article-util">
 		<ul class="article-util-list">
 			<li>
-				<a class="link-modify-article-answer" href="/api/qna/updateAnswer/{4}">수정</a>
+				<a class="link-modify-article-answer" id="modify-article-{4}" href="/api/questions/{5}/answers/{4}/form">수정</a>
 			</li>
 			<li>
                 <a class="link-delete-article-answer" href="/api/questions/{5}/answers/{4}">삭제</a>
